# dank

./: .gitignore  AGENTS.md  Dockerfile  README.md  opencode.json  pyproject.toml  run-linters.sh  schema.sql
.opencode/skills/: EMBEDDINGS.md  PROCESS.md  QUERY.md  SCRAPE.md
rich_list/: settings.py
rich_list/sources/: __init__.py  base.py  x.py
src/dank/: __init__.py  config.py  embedding_vectors.py  embeddings.py  html_utils.py  logging_setup.py  model.py
src/dank/process/: __init__.py  __main__.py  assets.py  page.py  processor.py  rss.py  runner.py  x.py
src/dank/provider/: x.py
src/dank/scrape/: __init__.py  __main__.py  assets.py  imap_email.py  rss.py  runner.py  types.py  x.py  x_payloads.py  zendriver.py
src/dank/scrape/x/: __init__.py  payloads.py
src/dank/storage/: __init__.py  clickhouse.py
src/dank/tools/: __init__.py  clickhouse_query.py  embed_text.py
src/dank/web/: __init__.py  __main__.py  app.py
static/: app.css
tests/: test_embeddings.py  test_process_rss.py  test_process_runner.py  test_rss_fallback.py  test_rss_parsing.py  test_x_payloads.py
tests/fixtures/: UserTweetsWactherGuruExample.json
tests/process/: test_process_rss.py  test_process_rss_html.py  test_process_runner.py  test_process_x.py
tests/scrape/: test_parse_rss_feed_entries.py  test_rss_fallback.py  test_rss_parsing.py  test_scrape_rss_assets.py  test_scrape_rss_feed.py  test_scrape_x.py  test_x_payloads.py
tests/storage/: test_clickhouse.py
tests/tools/: test_embed_text.py
